--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -154,7 +154,7 @@ h6 {
 #intro .intro-text {
   position: absolute;
   left: 0;
-  top: 60px;
+  top: 20px;
   right: 0;
   height: calc(50% - 60px);
   display: flex;
@@ -191,7 +191,7 @@ h6 {
   #intro p {
     font-size: 18px;
     line-height: 24px;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
   }
 }
 
@@ -226,37 +226,54 @@ h6 {
 }
 
 #intro .product-screens img {
-  width: 500px;
+  width: 300px;
   /* box-shadow: 0px -2px 19px 4px rgba(0, 0, 0, 0.29); */
 }
 
 #intro .product-screens .product-screen-1 {
+  /* width:300px; */
   position: absolute;
   z-index: 30;
   left: calc(50% + 270px);
   bottom: 0;
-  top: 30px;
+  top: 0px;
 }
 
 #intro .product-screens .product-screen-2 {
   position: absolute;
   z-index: 20;
-  left: calc(50% - 250px);
+  left: calc(50% - 150px);
   bottom: 0;
-  top: 30px;
+  top: 0px;
 }
 
 #intro .product-screens .product-screen-3 {
   position: absolute;
   z-index: 10;
-  left: calc(50% - 770px);
+  left: calc(50% - 570px);
   bottom: 0;
-  top: 30px;
+  top: 0px;
+}
+
+#intro .product-screens .product-screen-4 {
+  position: absolute;
+  z-index: 10;
+  left: calc(50% - 370px);
+  bottom: 0;
+  top: 220px;
+}
+
+#intro .product-screens .product-screen-5 {
+  position: absolute;
+  z-index: 10;
+  left: calc(50% + 70px);
+  bottom: 0;
+  top: 220px;
 }
 
 @media (max-width: 767px) {
   #intro .product-screens .product-screen-1 {
-    position: static;
+    position: absolute;
     padding-top: 30px;
   }
 
